# Test_Task

./: CMakeLists.txt  config.json  main.cpp
Test/Test/: main.cpp
Test/Test/archive_core/: archive_manager.cpp
Test/Test/ui/: mainwindow.h
archive_core/: archive_manager.cpp  archive_manager.h  archiver_pipeline.cpp  archiver_pipeline.h
services/: app_manager.cpp  app_manager.h  archive_manager.cpp  archive_manager.h  archiver_pipeline.cpp  archiver_pipeline.h
src/: main.cpp
src/archive_core/: archive_manager.cpp  archive_manager.h  archiver_pipeline.cpp  archiver_pipeline.h
src/structures/: file_data.h
src/ui/models/: table_model.cpp  table_model.h
src/ui/tab_items/: files_tab.h  summary_tab.h
src/ui/widgets/: expandable_widget.cpp  expandable_widget.h  table_view.cpp  table_view.h
terminal/: terminal_core.cpp  terminal_core.h
tests/: test_archive_manager.cpp  test_archive_manager.h  test_archiver_pipeline.cpp  test_archiver_pipeline.h  test_table_model.cpp  test_table_model.h  unit_test_runner.cpp  unit_test_runner.h
ui/: main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  table_view.cpp  table_view.h
ui/models/: tab_item_model.cpp  tab_item_model.h  table_model.cpp  table_model.h
ui/tab_items/: files_tab.cpp  files_tab.h  summary_tab.cpp  summary_tab.h
ui/widgets/: table_view_field.cpp  table_view_field.h  tree_view_field.cpp  tree_view_field.h
